--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <div class="container">
     <div class="jumbotron">
     <h1 class="display-3">Welcome to My Website</h1>
- <P class="lead">Curious student,Failer and Runner</p>
+ <P class="lead">Curious student,Failure and Runner</p>
  <hr class="my-4">
  <p>Hi! My name is HASIB. I am from Dhaka, Bangladesh. Today I am going to tell you something about my life. Today I will share my journey to this position with you. I was born in 11th November 2003. I am the youngest son of my parents among five of my brother and sister. My study had started at home. Then when I was 6 my father admitted me into a primary school near our home. I was not so good at my study. I was average in my student life. In 2020 I had passed SSC with 4.94. .</P>
  <p class="lead">
